# manim-shorts

./: .gitignore  LICENSE  README.md  docs_vector_db.py  main.py  make_vector_db.py  pyproject.toml  test.py
src/: ani_planner.py  audio.py  composer.py  manim_agent.py  reviewer.py  scripts.py  state.py
