[project]
name = "auto-3b1b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-core>=0.3.78",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.8",
    "manim>=0.19.0",
    "moviepy>=2.2.1",
    "openai>=2.2.0",
    "pydantic>=2.12.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
]
